# patchboard-atlas

./: AGENTS.md  PROGRESS.json  TODO.json  cryogenic-capsule.json  inventory.json  pyproject.toml
docs/spec/: component-id-card-ingestion-and-tree-projection.json  coordinates-machine-desc.json  interaction-model-salvage-from-marginalia-atlas.json  patchboard-atlas.gui-scaffold.json  patchboard-atlas.spec.json  rendering-process-salvage-from-marginalia-atlas.json  rendering-system-wires-addendum.json  rendering-system.json
guitest/: gui_scaffold_tests.py  tree_projection_tests.py
info/: modules.txt
src/patchboard_atlas/: cliapp.py  component_registry.py  coord_machine.py  ecs_world.py  gui_scaffold.py  log.py  mem.py  paths.py  rendering.py  reset.py  startup.py  tree_projection.py
test/: test_component_registry.py  test_coord_machine.py  test_ecs_world.py  test_log.py
