[project]
name = "patchboard-atlas"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lionscliapp",
  "tkintertester",
]

[project.scripts]
patchboard-atlas = "patchboard_atlas.cliapp:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
